--- a/stylegallery.css
+++ b/stylegallery.css
@@ -231,7 +231,7 @@ main a:hover{
     transition: transform 0.3s ease-in-out;
 }
 
-/* Efekt povećanja slike pri prelasku mišem */
+
 .gallery_g figure:hover img {
     transform: scale(1.1);
 }
@@ -260,17 +260,49 @@ main a:hover{
 
     .right {
         width: 100%;
+        flex-grow: 1;
+        display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 5px; 
+        padding-bottom: 10px; 
     }
     .gallery-container {
-        flex-direction: row;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+        min-height: calc(100vh - 70px);
     }
 
  
     .gallery{
-        flex-direction: row;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;;
+        gap: 5px;
+        padding-bottom: 10px;
         overflow-y: scroll;
     }
+
+    .panel {
+        width: 90%;
+        max-width: 400px;
+        height: auto;
+        overflow: hidden;
+        margin-bottom: 5px;
+    }
+
+    .panel img {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+    }
+
+
     .overlay {
         position: absolute;
         top: 10px; 
@@ -282,8 +314,8 @@ main a:hover{
         color: white;
         padding: 8px 12px;
         z-index: 5;
-        background: #5757574f; 
-        display: none; 
+        display: flex; 
+        background-color: #3a3a3a23;
         flex-direction: column;
         align-items: center;
         gap: 8px;
@@ -318,31 +350,61 @@ main a:hover{
         background: white;
         color: #1a1a1a;
     }
+
     .container {
-        flex-direction: column;
+        display: block;
+        flex-direction: row;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .logo-container img{
+        max-width: 120px;
+        height: auto;
     }
 
     .descr {
-        width: 100%;
-        text-align: center;
-        padding: 20px;
+        width: 90%;
+        padding: 10px;
+    }
+  
+    .descr h1{
+        font-size: 1.5rem;
+    }
+    .descr p{
+        font-size: 1rem;
+        line-height: 1.4;
     }
 
     .video {
-        width: 100%;
-        flex-direction: column;
+        width: 90%;
+        display: flex;
+        justify-content: center;
     }
+
+    .video video {
+        max-width: 100%;
+        height: auto;
+    }
+
     header{
         min-height:100vh;
     }
     main{
-        margin-top: 20px;
-        padding-top: 20px;
+        display: block;
     }
 
     .gallery_g {
-        margin-top: 30vw; 
-        padding-top: 20px; 
+        width: 100vw;
+        margin-left: calc(-5ovw+50%);
+        padding: 10px 0;
+    }
+
+    .gallery_g{
+        margin-top: 20px;
+        padding-top: 10px;
     }
 
     .gallery_g figure {
@@ -366,6 +428,9 @@ main a:hover{
     .gallery-navigation{
         display: none;
     }
-  
+    
+    footer {
+       position: fixed;
+    }
   
 }
