--- a/stylegallery.css
+++ b/stylegallery.css
@@ -27,8 +27,6 @@
 
 .gallery {
     display: flex;
-    width: 100vw;
-    height: 100vh; 
     gap: 10px;
     overflow: hidden;
 }
@@ -39,7 +37,7 @@
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     gap: 10px;
-    padding: 10px;
+    padding-top: 10vh;
 }
 
 .gallery-container .panel {
@@ -154,9 +152,9 @@
 
 .container {
     display: flex;
-    height: calc(100vh - 70px);
+    height: auto;
     width: 100%;
-    padding-top: 70px;
+    padding-top: 10vw;
 }
 
 
@@ -184,8 +182,8 @@
 
 main a{
     color: #f4a261;
-    font-family: "Cormorant Garamond", serif;
-    font-size: 1.3rem;
+    /*font-family: "Cormorant Garamond", serif;*/
+    font-size: 1.2rem;
     text-decoration: none;
 }
 main a:hover{
@@ -242,7 +240,6 @@ main a:hover{
     bottom: 10px;
     left: 50%;
     transform: translateX(-50%);
-    background: #a5a4a434;
     color: white;
     padding: 6px 12px;
     font-size: 16px;
@@ -298,7 +295,7 @@ main a:hover{
 
     .panel img {
         width: 100%;
-        height: auto;
+        height:30vh;
         object-fit: cover;
     }
 
@@ -315,7 +312,6 @@ main a:hover{
         padding: 8px 12px;
         z-index: 5;
         display: flex; 
-        background-color: #3a3a3a23;
         flex-direction: column;
         align-items: center;
         gap: 8px;
@@ -366,8 +362,8 @@ main a:hover{
     }
 
     .descr {
-        width: 90%;
-        padding: 10px;
+        width: 100%;
+       /* padding: 10px;*/
     }
   
     .descr h1{
@@ -379,7 +375,7 @@ main a:hover{
     }
 
     .video {
-        width: 90%;
+        width: 100%;
         display: flex;
         justify-content: center;
     }
@@ -432,5 +428,6 @@ main a:hover{
     footer {
        position: fixed;
     }
+
   
 }
