--- a/styleindex.css
+++ b/styleindex.css
@@ -155,6 +155,7 @@
 .video-container{
     display: flex;
     align-items: center;
+    overflow-x: hidden;
     justify-content: space-between;
     width: 100%;
     max-width: 1200px;
@@ -188,10 +189,12 @@
 
     .image-box {
         height: 100vh;
-        
+        flex-direction: column;
+        align-items: center;
     }
+
     .video-container{
-        margin-left: 20px;
+        margin-left: 10px;
         flex-direction: column;
         align-items: center;
         text-align: center;
